# footfall

./: .gitignore  pyproject.toml
ExploringFootfallData/: Locations_with_sensors.ipynb
MelbourneAnalysis/: ChoosingFeatures  ChoosingFeatures.md  Cleaning Melbourne City Data - OtherFeatures.ipynb  Features in Proximity to Sensors.ipynb  FindFeaturesInProximityToSensors.ipynb  README.md
MelbourneAnalysis/.ipynb_checkpoints/: Cleaning Melbourne City Data - OtherFeatures-checkpoint.ipynb
MelbourneAnalysis/AnalysingData/: ExploringFeaturesDistribution.ipynb  ExploringFootfallDistribution.ipynb  FootfallDistribution.ipynb  Untitled.ipynb  Weather Time Series on Limited Sensors.ipynb
MelbourneAnalysis/Cleaned_data/: weather_data_2011.csv  weather_data_2012.csv  weather_data_2013.csv  weather_data_2014.csv  weather_data_2015.csv  weather_data_2016.csv  weather_data_2017.csv  weather_data_2018.csv  weather_data_2019.csv  weather_data_2020.csv  weather_data_2021.csv  weather_data_2022.csv
MelbourneAnalysis/Modelling/: Functions.py  Modelling on Location Features & Previous Year's Counts-Copy1.ipynb  Modelling on Location Features & Previous Year's Counts.ipynb  Modelling on Location Features & Previous Year's Counts_old.ipynb  Untitled.ipynb
MelbourneAnalysis/PreparingData/: CleaningData-Footfall.ipynb  CleaningData-OtherFeatures.ipynb  CleaningData-SpecialDates.ipynb  FindFeaturesInProximityToSensors.ipynb  ScrapingWeatherData.ipynb
MelbourneAnalysis/Street_Network/: Street_Network.ipynb  bc.pickle
